add contract create and show requests
